src/test/deca/syntax/invalid/int_float.deca
// Description :
// double decalration

// Resultats :
// Erreur contextuelle


{
    int float x;
}